--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   
 
+  <script type="text/javascript" src="./app.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVrWvMC4ofsa2IBbnubiVYRvaav--aKPk&callback=initMap"
     async defer></script>
 </body>
