--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
   <title>Map</title>
 </head>
 <body>
   
+  <div id="map-container">
+    <div id="map"></div>
+  </div>
 
   <script type="text/javascript" src="./app.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVrWvMC4ofsa2IBbnubiVYRvaav--aKPk&callback=initMap"
