add draw heatmap function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </div>
 
   <script type="text/javascript" src="./app.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVrWvMC4ofsa2IBbnubiVYRvaav--aKPk&callback=initMap"
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVrWvMC4ofsa2IBbnubiVYRvaav--aKPk&callback=initMap&libraries=visualization"
     async defer></script>
 </body>
 </html>
