--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </nav>
   <div id="map" class="z-depth-3"></div>
   <script type="text/javascript" src="./app.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVrWvMC4ofsa2IBbnubiVYRvaav--aKPk&callback=initMap&libraries=visualization"
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVrWvMC4ofsa2IBbnubiVYRvaav--aKPk&callback=initMap&libraries=visualization,geometry"
     async defer></script>
 </body>
 </html>
