-changed data structures
Signed-off-by: Best104 <li.zhaoqi@dhs.sg>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Map</title>
   <link rel="stylesheet" type="text/css" href="materialize/css/materialize.min.css">
-  <script src="materialize.min.js"></script>
+  <script src="materialize/js/materialize.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
