--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     </div>
   </nav>
   <div id="map" class="z-depth-3"></div>
+  <script type="text/javascript" src="./data.js"></script>
+  <script type="text/javascript" src="./map-helpers.js"></script>
   <script type="text/javascript" src="./app.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVrWvMC4ofsa2IBbnubiVYRvaav--aKPk&callback=initMap&libraries=visualization,geometry"
     async defer></script>
