--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <script src="materialize/js/materialize.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script type="text/javascript" src="./data.js"></script>
   <script type="text/javascript" src="./map-helpers.js"></script>
   <script type="text/javascript" src="./app.js"></script>
