--- a/index.html
+++ b/index.html
@@ -21,20 +21,27 @@
   </nav>
   <div id="map" class="z-depth-3"></div>
   <div class="container">
-   <ul class="collapsible popout" id="dataFilter">
+    <ul class="collapsible popout" id="dataFilter">
 
-      <li><div class="collapsible-header waves-effect waves-teal"><i class="material-icons">filter_drama</i>
-      First
-    </div><div class="collapsible-body"><ul class="collection">
+      <li>
+        <div class="collapsible-header waves-effect waves-teal">
+          <i class="material-icons">filter_drama</i> First
+        </div>
 
-        <li class="collection-item flow-text"><div>
-          Test
-              <label class="secondary-content"><input type="checkbox" /><span>show data</span></label></div></li>
+        <div class="collapsible-body">
+          <ul class="collection">
 
-              
-
-          </ul></div></li>
-
+            <li class="collection-item flow-text">
+              <div>
+                Test
+                <label class="secondary-content">
+                  <input type="checkbox" /><span>show data</span>
+                </label>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
     </ul>
   </div>
 
