--- a/index.html
+++ b/index.html
@@ -22,20 +22,18 @@
   <div id="map" class="z-depth-3"></div>
   <div class="container">
     <ul class="collapsible popout" id="dataFilter">
-
-      <li>
+      <li v-for="category in categories">
         <div class="collapsible-header waves-effect waves-teal">
-          <i class="material-icons">filter_drama</i> First
+          <i class="material-icons">filter_drama</i>{{ category.name }}
         </div>
 
         <div class="collapsible-body">
           <ul class="collection">
-
-            <li class="collection-item flow-text">
+            <li class="collection-item flow-text" v-for="layer in category.heatmaps.concat(category.polys)">
               <div>
-                Test
+                {{ layer.name }}, a {{ layer.type }}
                 <label class="secondary-content">
-                  <input type="checkbox" /><span>show data</span>
+                  <input type="checkbox" v-model="layer.state" v-on:click="toggleVisibility(layer)"/><span>show data</span>
                 </label>
               </div>
             </li>
