--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="nav-wrapper">
       <div class="brand-logo">Help Me.</div>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="#">Map</a></li>
+        <li><a onclick="scrolltobottom()">Map</a></li>
         <li><a href="#">About us</a></li>
       </ul>
     </div>
