--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
     </ul>
   </div>
 
+  <div class="row">
+    <div class="col s12 m5">
+      <div style="position:fixed; top:25vh; height: 50vh; width:50vh; z-index: -3; right:20px;" id="card-panel" class="card-panel white">
+        <span class="black-text">Press anywhere on the map
+        </span>
+      </div>
+    </div>
+  </div>
+
   <script src="materialize/js/materialize.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script type="text/javascript" src="./data.js"></script>
