Fixed scrollbar glitches and added card panel

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body onload="setTimeout(function(){updatehtml();document.getElementById('map').style.position='fixed';},1000)">
+<body onload="updatehtml();setTimeout(function(){document.getElementById('map').style.position='fixed';},100)">
 	<nav id="navbar">
     <div class="nav-wrapper">
       <div class="brand-logo">Help Me.</div>
