--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
   <div id="map2"></div>
 
   <div id="map" class="z-depth-3"></div>
-  <div class="container">
+  <div class="container" id="category-list">
     <ul class="collapsible popout" id="dataFilter">
+      <input type="text" v-model="query">
       <li v-for="category in categories">
         <div class="collapsible-header waves-effect waves-teal">
           <i class="material-icons">filter_drama</i>{{ category.name }}
