--- a/index.html
+++ b/index.html
@@ -28,10 +28,23 @@
   <div onclick="reset();" style="position: fixed; z-index: -2; right:100px; top: 10px;" id="reset">Reset</div>
 
   <div id="map" class="z-depth-3"></div>
-  <div class="container">
+  
+
+  <div class="row">
+    <div class="col s12 m5">
+      <div style="position:fixed; top:25vh; height: 50vh; width:50vh; z-index: -3; right:20px;" id="card-panel" class="card-panel white">
+        <span class="black-text">Press anywhere on the map
+        </span>
+      </div>
+    </div>
+  </div>
+  
+  <div id="shownav" onclick="darken();" style="z-index: 4; position: fixed;">E</div>
+  <div id="sidenav" style="transition: all 0.3s cubic-bezier(.25,.8,.25,1);position:fixed; top:0; left: -45vw; width: 40vw; height: 100vh; z-index: 5; background-color: white;box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
+    <div class="container">
     <ul class="collapsible popout" id="dataFilter">
       <li v-for="category in categories" style="box-shadow: none;">
-        <div  id="stuff" class="collapsible-header waves-effect waves-teal" style="z-index: -3;">
+        <div class="stuff collapsible-header waves-effect waves-teal" style="z-index: -3;">
           <i class="material-icons">filter_drama</i>{{ category.name }}
         </div>
 
@@ -50,18 +63,7 @@
       </li>
     </ul>
   </div>
-
-  <div class="row">
-    <div class="col s12 m5">
-      <div style="position:fixed; top:25vh; height: 50vh; width:50vh; z-index: -3; right:20px;" id="card-panel" class="card-panel white">
-        <span class="black-text">Press anywhere on the map
-        </span>
-      </div>
-    </div>
   </div>
-  
-  <div id="shownav" onclick="darken();" style="z-index: 4; position: fixed;">E</div>
-  <div id="sidenav" style="transition: all 0.3s cubic-bezier(.25,.8,.25,1);position:fixed; top:0; left: -25vw; width: 20vw; height: 100vh; z-index: 5; background-color: white;box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);"></div>
   <div id="darken" onclick="lighten();" style="position: fixed; width: 100vw; height: 100vh; top:0; left: 0; z-index: -3; background-color: black; opacity: 0.6;"></div>
 
   <script src="materialize/js/materialize.min.js"></script>
