--- a/index.html
+++ b/index.html
@@ -39,17 +39,26 @@
     </div>
   </div>
   
-  <div id="shownav" onclick="darken();" style="z-index: 4; position: fixed;">E</div>
-  <div id="sidenav" style="transition: all 0.3s cubic-bezier(.25,.8,.25,1);position:fixed; top:0; left: -45vw; width: 40vw; height: 100vh; z-index: 5; background-color: white;box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
+  <div id="shownav" onclick="darken();" style="z-index: 4; position: fixed; left: 10px; top:50px; width: 3vw; height: 3vw; background-color: white; font-size: 30px;"><img style="width: 100%;" src="./materialize/img/menu.png" alt=""></div>
+  <div id="sidenav" style="transition: all 0.3s cubic-bezier(.25,.8,.25,1);position:fixed; top:0; left: -35vw; width: 30vw; height: 100vh; z-index: 5; background-color: white;box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
     <div class="container">
     <ul class="collapsible popout" id="dataFilter">
       <li v-for="category in categories" style="box-shadow: none;">
         <div class="stuff collapsible-header waves-effect waves-teal" style="z-index: -3;">
           <i class="material-icons">filter_drama</i>{{ category.name }}
+          <ul class="collection" style="position: absolute; right: 0; top: 5px;">
+            <li class="collection-item flow-text" v-for="layer in category.heatmaps.concat(category.polys)">
+              <div>
+                <label class="secondary-content">
+                  <input type="checkbox" v-model="category.state" v-on:click="toggleAllInCategory(category)"/><span></span>
+                </label>
+              </div>
+            </li>
+          </ul>
         </div>
 
         <div class="collapsible-body">
-          <ul class="collection">
+          <ul class="collection" style="background-color: transparent;">
             <li class="collection-item flow-text" v-for="layer in category.heatmaps.concat(category.polys)">
               <div>
                 {{ layer.name }}, a {{ layer.type }}
